Fix word wrapping nav items

--- a/1_Web-Development-101/4_Flexbox/Project_Landing-Page/style.css
+++ b/1_Web-Development-101/4_Flexbox/Project_Landing-Page/style.css
@@ -233,3 +233,12 @@ footer {
 	background-color: var(--dark-blue);
 	padding: .5em;
 }
+
+/** firefox adjustments **/
+@-moz-document url-prefix() {
+
+	/* fix word wrap on nav items */
+	.nav-list {
+		width: 425px;
+	}
+}
